<resources>
    <string name="app_name">QuizGame</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="questionButton">Question Editor</string>
    <string name="gameButton">Start Game</string>
    <string name="true_button">True</string>
    <string name="false_button">False</string>
    <string name="true_game_button">True?</string>
    <string name="false_game_button">False?</string>

    <string name="enterQuestion">Enter Question:</string>
    <string name="enterAnswer">Enter Answer:</string>
    <string name="question">Question</string>
    <string name="results">Results</string>
    <string name="question_game">Question:</string>
    <string name="next_button">Next</string>
    <string name="previous_button">Previous</string>
    <string name="okay_button">Okay</string>
    <string name="main_screen_button">Back to Main Screen</string>


    <string name="new_question">New Question</string>
    <string name="action_settings">Settings</string>
    <string name="delete_question">Delete</string>
    <string name="welcome">Welcome to QuizGame!</string>
    <string name="select">Please choose an option</string>
</resources>
